objects/Jefferie__c.object
<CustomObject>
    <fields>
        <fullName>J_Text__c</fullName>
        <label>J Text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jan_21__c</fullName>
        <label>Jan 21</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suleman_test__c</fullName>
        <label>Suleman test</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Jefferie</label>
    <nameField>
        <label>Jefferie Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jefferie</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>